MC metrics table